--- a/Assignment4/src/main/resources/templates/register.html
+++ b/Assignment4/src/main/resources/templates/register.html
@@ -51,7 +51,7 @@
 			var emailRegister = $('#email').val();
 	     	$.ajax({
 	     		type : "GET",
-	     		url : window.location.origin+"/api/user/checkEmail/"+emailRegister,
+	     		url : window.location.origin+"/api/users/checkEmail/"+emailRegister,
 	     		success: function(result){				
      				if(result.data){
      					$('#msgNoti').html("Email đã tồn tại");
@@ -75,7 +75,7 @@
 		   	$.ajax({
 		   		type : "POST",
 		   		contentType : "application/json",
-		   		url : window.location.origin+"/api/user/register",
+		   		url : window.location.origin+"/api/users",
 		   		data : JSON.stringify(newUser),
 		   		dataType : 'json',
 		   		success: function(result){		
