--- a/Assignment4/src/main/resources/templates/userCreationPage.html
+++ b/Assignment4/src/main/resources/templates/userCreationPage.html
@@ -13,7 +13,26 @@ $(document).ready(function() {
 	    	password: " Mật khẩu không được trống",
 	    	passwordConfirm: "Mật khẩu không khớp"
 	    }
-    }); $('#userCreationDiv').modal('show');
+    }); 
+    $('#userCreationDiv').modal('show');
+    $("#email").change(function(){   
+		var emailRegister = $('#email').val();
+     	$.ajax({
+     		type : "GET",
+     		url : window.location.origin+"/api/users/checkEmail/"+emailRegister,
+     		success: function(result){				
+ 				if(result.data){
+ 					$('#msgNoti').html("Email đã tồn tại");
+ 				}else{
+ 					$('#msgNoti').html("");
+ 				}
+     		},
+     		error : function(ex) {
+     			alert("ERROR: ", ex);
+     			console.log("ERROR: ", ex);
+     		}
+     	});
+	});
 });
 
 $("#userCreationForm").submit(function(event) {
@@ -32,7 +51,7 @@ function addUser(){
 	 $.ajax({
 		type : "POST",
 		contentType : "application/json",
-		url : window.location.origin+"/api/user/register",
+		url : window.location.origin+"/api/users",
 		data : JSON.stringify(newUser),
 		dataType : 'json',
 		success: function(result){
@@ -62,7 +81,8 @@ function addUser(){
 			  <table style=" width:100%"  class="bookForm">
 			   <tr>
 			    <td><label ><b>Email</b></label></td>
-			    <td><input type="email" name="email" id="email" class="form-control" ></td>
+			    <td><input type="email" name="email" id="email" class="form-control" >
+			    <a class='error' id='msgNoti'></a></td>
 			   </tr>
 			   <tr>
 			    <td><label ><b>Mật khẩu</b></label></td>
