--- a/Assignment4/src/main/resources/templates/usersListPage.html
+++ b/Assignment4/src/main/resources/templates/usersListPage.html
@@ -98,7 +98,7 @@ function displayUsers(){
 	
 	$.ajax({
 		type : "GET",
-		url : window.location.origin+"/api/user/allUser?page="+currentPageIndex+"&size="+pageSize,
+		url : window.location.origin+"/api/users/findByRole/user?page="+currentPageIndex+"&size="+pageSize,
 		success: function(result){
 				$('#tableUserList tbody').html("");
 				$.each(result.data.content, function(i, user){
@@ -144,7 +144,7 @@ function getRoleName(roleId){
 		$.ajax({
 		 type : "GET",
 		 async: false,
-         url: window.location.origin+"/api/role/"+roleId
+         url: window.location.origin+"/api/roles/"+roleId
      }).done(function (data) {
     	 result = data.name;
      });
@@ -153,7 +153,7 @@ function getRoleName(roleId){
 
 function enabledUser(st, id){
 	$.ajax({
-	  url: window.location.origin+"/api/user/enabled/"+id,
+	  url: window.location.origin+"/api/users/enabled/"+id,
       type: 'POST',
       cache: false,
       data: {
@@ -183,7 +183,7 @@ $("#tableUserList tbody").on("click",".changeEnabledBtn",function(){
 	var confirmMsg = confirm("Bạn có muốn thay đổi quyền hoạt động ?");
 	if(confirmMsg == true){
 		$.ajax({
-			  url: window.location.origin+"/api/user/enabled/"+id,
+			  url: window.location.origin+"/api/users/enabled/"+id,
 		     type: 'POST',
 		     cache: false,
 		     data: {
