--- a/Assignment4/src/main/resources/templates/bookDetailPage.html
+++ b/Assignment4/src/main/resources/templates/bookDetailPage.html
@@ -30,12 +30,14 @@ function getAllComment(bookId){
 	 $.ajax({
 		type : "GET",
 		contentType : "application/json",
-		url : window.location.origin+"/api/comment/all/"+bookId,
+		url : window.location.origin+"/api/comments/"+bookId,
 		success: function(result){
 			$.each(result, function(i, comment){
 					var commentDiv = '<div class="panel panel-info">' + 
-					'<div class="panel-heading" style="margin: 3px 3px 3px"><b>' + getEmailUserById(comment.userId) + 
-					'</b><i style="padding-left: 10px;font-size: small;">' + comment.createdAt + '</i></div>' +
+					'<div class="panel-heading" style="margin: 3px 3px 3px"><b>' +
+					getEmailUserById(comment.userId) + 
+					'</b><i style="padding-left: 10px;font-size: small;">' + 
+					comment.createdAt + '</i></div>' +
 					'<div class="panel-body">'+comment.message + '</div>' +
 					
 					'</div>';
@@ -56,7 +58,7 @@ function addComment(){
 	 $.ajax({
 		type : "POST",
 		contentType : "application/json",
-		url : window.location.origin+"/api/comment/add/"+bookId,
+		url : window.location.origin+"/api/comments/"+bookId,
 		data : JSON.stringify(newComment),
 		dataType : 'json',
 		success: function(result){
